# Plugin

./: README.md
include/: Plugin.h
src/Plugin/: CMakeLists.txt  PluginLinux.cpp  PluginWin.cpp
